# vectaraft

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci.yml
clients/python/: sample_client.py
examples/: ping_client.rs
proto/: vector_db.proto
src/: lib.rs  main.rs  pb.rs  types.rs
src/catalog/: mod.rs
src/filters/: mod.rs
src/index/: flat.rs
src/pbgen/: mod.rs  vectordb.v1.rs
src/planner/: mod.rs
src/server/: grpc.rs  mod.rs  state.rs
src/storage/: wal.rs
src/telemetry/: mod.rs
src/txn/: mod.rs
tests/: grpc_flow.rs
