[package]
name = "vectaraft"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"   # <-- add this

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
rayon = "1"
prometheus = "0.13"
axum = { version = "0.7", features = ["macros"] }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
protoc-bin-vendored = "3"

[dev-dependencies]
serial_test = "2"
tempfile = "3"
